--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
     
     <main class="container text-center py-5 mt-5">
         <div>
-            <img src="https://via.placeholder.com/150" alt="Profile Image" class="img-fluid rounded-circle mb-3">
-            <h1 class="mb-2">Shivam Sahu</h1>
-            <h1 class="lead">Angular Frontend Developer</h1>
+            <img src="assets/shivam yt.png" alt="Profile Image" class="img-fluid rounded-circle mb-3 w-50 h-10">
+            <h1>Shivam Sahu</h1>
+            <h1>Angular Frontend Developer</h1>
            <h1>Phone/Whatsapp -  (+91) 9752245608</h1>
         </div>
         
